Adding images to the code and adjusting height and width

--- a/week_1/Html/index.html
+++ b/week_1/Html/index.html
@@ -11,6 +11,19 @@
             <p>This is a paragraph.</p>
             <br>
             <p>This is also a paragraph, after a break</p>
+
+            <p>This is images added from a different directory.</p>
+            <img src="../Images/boat.jpg" height="150" />
+            <img src="../Images/cablecar.jpg" height="100"/>
+            <img src="../Images/city.jpg" width="150"/>
+            <img src="../Images/plane.jpg" width="100"/>
+            <img src="../Images/plane2.jpg" height="150" width="150"/>
+            <img src="../Images/truck.jpg" height="100" width="100"/>
+            <img src="../Images/yacht.jpg" height="150" width="100"/>
+
+            <p>Setting image width and height</p>
+            <img src="../Images/cablecar.jpg" width="150" />
+            <img src="../Images/cablecar.jpg" hegith="100" />
         </body>
     </head>
 </html>
