Adding hyperlink, and images with hyperlinks. (Added 2 files and linked all three pages)

--- a/week_1/Html/index.html
+++ b/week_1/Html/index.html
@@ -24,6 +24,10 @@
             <p>Setting image width and height</p>
             <img src="../Images/cablecar.jpg" width="150" />
             <img src="../Images/cablecar.jpg" hegith="100" />
+
+            <p>This is a hyperlink</p>
+            <a href="http://www.google.com"> Click here to go to Google</a>
+            <a href="https://github.com/Roslyn10"> Click here to go my Github</a>
         </body>
     </head>
 </html>
