Updating the two files

--- a/week_1/Html/index.html
+++ b/week_1/Html/index.html
@@ -27,7 +27,14 @@
 
             <p>This is a hyperlink</p>
             <a href="http://www.google.com"> Click here to go to Google</a>
+            <br/>
             <a href="https://github.com/Roslyn10"> Click here to go my Github</a>
+
+            <a href="about.html">Click here to go to the About us page</a>
+
+            <p>Images with Hyperlinks</p>
+            <p>Clcik the following image</p>
+            <a href="boat.html"><img src="../Images/boat.jpg" height="150" /></a>
         </body>
     </head>
 </html>
