--- a/week_2/HTML/index.html
+++ b/week_2/HTML/index.html
@@ -2,5 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet"  href="../CSS/style.css">
+        <h1>This is a heading</h1>
+        <p>This is a paragraph</p>
     </head>
 </html>
