--- a/week_1/Html/index.html
+++ b/week_1/Html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+         <link rel="stylesheet"  href="../CSS/style.css">
         <body>
             <h1>Home page</h1>
             <h2>This is heading 2</h2>
