Adding a list and styling it in CSS

--- a/week_1/Html/index.html
+++ b/week_1/Html/index.html
@@ -36,6 +36,21 @@
             <p>Images with Hyperlinks</p>
             <p>Clcik the following image</p>
             <a href="boat.html"><img src="../Images/boat.jpg" height="150" /></a>
+            
+            <ul>
+                <li>Apples</li>
+                <li>Grapes</li>
+                <li>Oranges</li>
+                <li>Strawberries</li>
+            </ul>
+
+            <ol>
+                <li>Eggs</li>
+                <li>Milk</li>
+                <li>Flour</li>
+                <li>Sugar</li>
+            </ol>
+        
         </body>
     </head>
 </html>
