--- a/week_1/Html/index.html
+++ b/week_1/Html/index.html
@@ -3,6 +3,9 @@
     <head>
          <link rel="stylesheet"  href="../CSS/style.css">
         <body>
+            <a href="index.html">Home</a>
+            <a href="about.html"> About</a>
+            <a href="#"> Contact</a>
             <h1>Home page</h1>
             <h2>This is heading 2</h2>
             <h3>This is heading 3</h3>
