Adding a font to the webpage

--- a/week_2/HTML/index.html
+++ b/week_2/HTML/index.html
@@ -13,5 +13,19 @@
         <h6>This is heading 6</h6>
         <br/>
         <p>This is a paragraph</p>
+
+        <ul>
+            <li>Apples</li>
+            <li>Grapes</li>
+            <li>Oranges</li>
+            <li>Strawberries</li>
+        </ul>
+
+        <ol>
+            <li>Eggs</li>
+            <li>Milk</li>
+            <li>Flour</li>
+            <li>Sugar</li>
+        </ol>
     </body>
 </html>
