--- a/week_2/HTML/index.html
+++ b/week_2/HTML/index.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="../CSS/Style.css">
     </head>
     <body>
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        
         <h1>Home Page</h1>
         <h2>This is heading 2</h2>
         <h3>This is heading 3</h3>
