--- a/week_2/HTML/index.html
+++ b/week_2/HTML/index.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" href="../CSS/Style.css">
     </head>
     <body>
+        <div>
         <a href="index.html">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
+        </div>
         
         <h1>Home Page</h1>
         <h2>This is heading 2</h2>
