--- a/week_2/HTML/index.html
+++ b/week_2/HTML/index.html
@@ -5,12 +5,12 @@
         <link rel="stylesheet" href="../CSS/Style.css">
     </head>
     <body>
-        <div>
+        <div id="menu-bar">
         <a href="index.html">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
         </div>
-        
+
         <h1>Home Page</h1>
         <h2>This is heading 2</h2>
         <h3>This is heading 3</h3>
