Updating the images for the superhero app

--- a/week_2/Superhero-app/HTML/index.html
+++ b/week_2/Superhero-app/HTML/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="gallery">
-			<img src= />
+			<img src="../Images/Avengersimages/" />
 		</div>
 	</body>
 </html>			
