Adding the images to the webpage

--- a/week_2/Superhero-app/HTML/index.html
+++ b/week_2/Superhero-app/HTML/index.html
@@ -5,7 +5,12 @@
 	</head>
 	<body>
 		<div class="gallery">
-			<img src="../Images/Avengersimages/" />
+			<img src="../Images/avengers_01.jpg" />
+			<img src="../Images/avengers_02.jpg" />
+			<img src="../Images/avengers_03.jpg" />
+			<img src="../Images/avengers_04.jpg" />
+			<img src="../Images/avengers_05.jpg" />
+			<img src="../Images/avengers_06.jpg" />
 		</div>
 	</body>
 </html>			
