Adding the firs new bio page for thor

--- a/week_2/Superhero-app/HTML/index.html
+++ b/week_2/Superhero-app/HTML/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="../CSS/style.css">
 	</head>
 	<body>
 		<div class="gallery">
-			<img src="../Images/avengers_01.jpg" />
+			<a href='Thor.html'><img src="../Images/avengers_01.jpg" /></a> 
 			<img src="../Images/avengers_02.jpg" />
 			<img src="../Images/avengers_03.jpg" />
 			<img src="../Images/avengers_04.jpg" />
