--- a/week_2/Superhero-app/HTML/index.html
+++ b/week_2/Superhero-app/HTML/index.html
@@ -7,11 +7,11 @@
 	<body>
 		<div class="gallery">
 			<a href='Thor.html'><img src="../Images/avengers_01.jpg" /></a> 
-			<img src="../Images/avengers_02.jpg" />
-			<img src="../Images/avengers_03.jpg" />
-			<img src="../Images/avengers_04.jpg" />
-			<img src="../Images/avengers_05.jpg" />
-			<img src="../Images/avengers_06.jpg" />
+			<a href="Ironman.html"><img src="../Images/avengers_02.jpg" /></a>
+			<a href="Hulk.html"><img src="../Images/avengers_03.jpg" /></a>
+			<a href="Hawkeye.html"><img src="../Images/avengers_04.jpg" /></a> 
+			<a href="CaptainAmerica.html"><img src="../Images/avengers_05.jpg" /></a> 
+			<a href="BlackWidow.html"><img src="../Images/avengers_06.jpg" /></a> 
 		</div>
 	</body>
 </html>			
