--- a/week_2/Superhero-app/HTML/Hulk.html
+++ b/week_2/Superhero-app/HTML/Hulk.html
@@ -14,7 +14,7 @@
         <p><b>Place of Birth:</b> Ohio</p>
         <p><b>Alignment:</b> Good</p>
         <p><b>Gender:</b> Male</p>
-        <p><b>Race:</b> Human (radiation)</p>
+        <p><b>Race:</b> Human (Radiation)</p>
         <br/>
         <h4>Power Stats</h4>
         <p><b>Intelligence:</b> 88%</p>
