--- a/week_2/Superhero-app/HTML/index.html
+++ b/week_2/Superhero-app/HTML/index.html
@@ -5,6 +5,11 @@
 		<link rel="stylesheet" href="../CSS/style.css">
 	</head>
 	<body>
+		<div id="menu">
+			<a href="#"></a>Home</a>
+			<a href="#"></a>About</a>
+			<a href="#"></a>Contact</a>
+		</div>
 		<div class="gallery">
 			<a href='Thor.html'><img src="../Images/avengers_01.jpg" /></a> 
 			<a href="Ironman.html"><img src="../Images/avengers_02.jpg" /></a>
