--- a/week_2/Superhero-app/HTML/index.html
+++ b/week_2/Superhero-app/HTML/index.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		<div id="menu">
-			<a href="index.html"></a>Home</a>
-			<a href="about.html"></a>About</a>
-			<a href="contact.html"></a>Contact</a>
+			<a href="index.html"><Home</a>
+			<a href="about.html"><About</a>
+			<a href="contact.html"><Contact</a>
 		</div>
 		<div class="gallery">
 			<a href='Thor.html'><img src="../Images/avengers_01.jpg" /></a> 
