--- a/week_3/Pine City Zoo/HTML/Index.html
+++ b/week_3/Pine City Zoo/HTML/Index.html
@@ -6,7 +6,19 @@
     </head>
     <body>
         <div id="header">
-            <img src=".." 
-        </div>
+            <img src="../Images/logo.png"/>
+            </div>
+            <div id="tabs-top">
+                <a href="#">ANIMALS</a>
+                <a href="#">MAP</a>
+                <a href="#">PLACES</a>
+            </div>
+            <div id="main-home">
+                <img src="../Images/map.png" width="100">
+            </div>
+            <div id="tabs-bottom">
+                <a href="#">WEATHER</a>
+                <a href="#">FEEDBACK</a>
+            </div>
     </body>
 </html>
