Fixing the style of the map/ fixing the height and width

--- a/week_3/Pine City Zoo/HTML/Index.html
+++ b/week_3/Pine City Zoo/HTML/Index.html
@@ -14,7 +14,7 @@
                 <a href="#">PLACES</a>
             </div>
             <div id="main-home">
-                <img src="../Images/map.png" width="150">
+                <img src="../Images/map.png" style="width:100%; height:auto;">
             </div>
             <div id="tabs-bottom">
                 <a href="#">WEATHER</a>
