Adding the animals page to the webpage and linking it to the homepage

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -13,8 +13,15 @@
                 <a href="Index.html">MAP</a>
                 <a href="#">PLACES</a>
             </div>
-            <div id="main-home">
-                <img src="../Images/map.png" style="width:100%; height:auto;">
+            <div id="main">
+                <div id="content">
+                    <a class="info-box" href="#">
+                        <img class="right" src="../Images/next-arrow.png"/>
+                        <img src="../Images/elephant-tn.png"/>
+                        <h3>ELEPHANTS</h3>
+                        <p>Gentle  giants of the jungle</p>
+                    </a>
+                </div>
             </div>
             <div id="tabs-bottom">
                 <a href="#">WEATHER</a>
