Trying to fix the image layout of the info box

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -17,10 +17,13 @@
                 <div id="content">
                     <a class="info-box" href="#">
                         <img class="right" src="../Images/next-arrow.png"/>
-                        <img src="../Images/elephant-tn.png"/>
-                        <h3>ELEPHANTS</h3>
-                        <p>Gentle  giants of the jungle</p>
-                    </a>
+                        <div class="info-content">
+                            <img class="info-box-img" src="../images/elephant-tn.png"/>
+                            <div class="text">
+                                <h3>ELEPHANTS</h3>
+                                <p>Gentle giants of the jungle</p>
+                            </div>
+                        </div>
                 </div>
             </div>
             <div id="tabs-bottom">
