Fixing the image reference of the elephant

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -18,7 +18,7 @@
                     <a class="info-box" href="#">
                         <img class="right" src="../Images/next-arrow.png"/>
                         <div class="info-content">
-                            <img class="info-box-img" src="../images/elephant-tn.png"/>
+                            <img class="info-box-img" src="../Images/elephant-tn.png">
                             <div class="text">
                                 <h3>ELEPHANTS</h3>
                                 <p>Gentle giants of the jungle</p>
