Fixing the layout of the html page and fixing the divs

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -1,34 +1,33 @@
-<!Doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="../CSS/Style.css">
-    </head>
-    <body>
-        <div id="header">
-            <img src="../Images/logo.png"/>
-            </div>
-            <div id="tabs-top">
-                <a href="animals.html">ANIMALS</a>
-                <a href="Index.html">MAP</a>
-                <a href="#">PLACES</a>
-            </div>
-            <div id="main">
-                <div id="content">
-                    <a class="info-box" href="#">
-                        <img class="right" src="../Images/next-arrow.png"/>
-                        <div class="info-content">
-                            <img class="info-box-img" src="../Images/elephant-tn.png">
-                            <div class="text">
-                                <h3>ELEPHANTS</h3>
-                                <p>Gentle giants of the jungle</p>
-                            </div>
-                        </div>
-                </div>
-            </div>
-            <div id="tabs-bottom">
-                <a href="#">WEATHER</a>
-                <a href="#">FEEDBACK</a>
-            </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Pine City Zoo</title>
+    <link rel="stylesheet" href="../CSS/Style.css">
+</head>
+<body>
+    <div id="header">
+        <img src="../Images/logo.png" alt="Zoo Logo">
+    </div>
+    <div id="tabs-top">
+        <a href="animals.html">ANIMALS</a>
+        <a href="Index.html">MAP</a>
+        <a href="#">PLACES</a>
+    </div>
+    <div id="main">
+        <div id="content">
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png" alt="Next Arrow">
+                <img src="../Images/elephant-tn.png" alt="Elephant Thumbnail">
+                <h3>ELEPHANTS</h3>
+                <p>Gentle giants of the jungle</p>
+            </a>
+        </div>
+    </div>
+    <div id="tabs-bottom">
+        <a href="#">WEATHER</a>
+        <a href="#">FEEDBACK</a>
+    </div>
+
+</body>
 </html>
