removing the unnecessary changes and going back to the original code

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -17,12 +17,16 @@
     <div id="main">
         <div id="content">
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png" alt="Next Arrow">
-                <img src="../Images/elephant-tn.png" alt="Elephant Thumbnail">
-                <h3>ELEPHANTS</h3>
-                <p>Gentle giants of the jungle</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" sr="../Images/elephant-tn.png"/>
+                    <div class="text">
+                        <h3>ELEPHANTS</h3>
+                        <p>Gentle giants of the jungle.</p>
+                    </div>
+                </div>
             </a>
-        </div>
+
     </div>
     <div id="tabs-bottom">
         <a href="#">WEATHER</a>
