Adding the other sections to the page about the other animals

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -26,7 +26,86 @@
                     </div>
                 </div>
             </a>
-
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/gemsbok-tn.png"/>
+                    <div class="text">
+                        <h3>GEMSBOK</h3>
+                        <p>Come and see the majestic Gemsbok.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/giraffe-tn.png"/>
+                    <div class="text">
+                        <h3>GIRAFFES</h3>
+                        <p>Our giraffes love company.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/gorilla-tn.png"/>
+                    <div class="text">
+                        <h3>GORILLAS</h3>
+                        <p>Kong the gorilla is much friendlier than he looks.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/koala-tn.png"/>
+                    <div class="text">
+                        <h3>KOALAS</h3>
+                        <p>Come take a look at the cute koalas.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/lion-tn.png"/>
+                    <div class="text">
+                        <h3>LIONS</h3>
+                        <p>The kinf of the jungle awaits your visit.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/monkey-tn.png"/>
+                    <div class="text">
+                        <h3>MONKEYS</h3>
+                        <p>Playful monkeys are smarter than you think.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/panda-tn.png"/>
+                    <div class="text">
+                        <h3>PANDAS</h3>
+                        <p>The pandas seem to be everyone's favourite.</p>
+                    </div>
+                </div>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/warthog-tn.png"/>
+                    <div class="text">
+                        <h3>WARTHOGS</h3>
+                        <p>Find out more about this funny-looking fellow.</p>
+                    </div>
+                </div>
+            </a>
     </div>
     <div id="tabs-bottom">
         <a href="#">WEATHER</a>
