Adding the elephant page and the informtation to it

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -16,7 +16,7 @@
     </div>
     <div id="main">
         <div id="content">
-            <a class="info-box" href="#">
+            <a class="info-box" href="elephants.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/elephant-tn.png"/>
@@ -29,7 +29,7 @@
             <a class="info-box" href="#">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
-                    <img class="info-box-img" src="../Images/gemsbok-tn.png"/>
+                    <img class="info-box-img" src="../Images/gemsbok-tn.png  "/>
                     <div class="text">
                         <h3>GEMSBOK</h3>
                         <p>Come and see the majestic Gemsbok.</p>
