--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="gemsbok.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/gemsbok-tn.png  "/>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="giraffes.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/giraffe-tn.png"/>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="gorillas.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/gorilla-tn.png"/>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="koalas.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/koala-tn.png"/>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="lions.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/lion-tn.png"/>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="monkeys.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/monkey-tn.png"/>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="pandas.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/panda-tn.png"/>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="warthogs.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/warthog-tn.png"/>
