Adding a bold bracket to the paragraph

--- a/week_3/Pine City Zoo/HTML/monkeys.html
+++ b/week_3/Pine City Zoo/HTML/monkeys.html
@@ -20,7 +20,7 @@
                 <img src="../Images/monkey.jpg"/>
                 <h3>DUSKY LEAF MONKEYS</h3>
                 <p>The dusky leaf monkey, spectacled langur, or spectacled leaf monkey (Trachypithecus obscurus) is a species of primate in the family Cercopithecidae. It is found in Malaysia, Burma, and Thailand.</p>
-                <p>WHERE WILL YOU FIND THEM?</p>
+                <p><b>WHERE WILL YOU FIND THEM?</b></p>
                 <p>You will find the monkeys at the monkey cage near the Monkey Trail.</p>
             </div>
         </div>
