Adding the new places page and fixing the referance to it in the other pages.
Also adding information to the places page and adding the amphitheatre section

--- a/week_3/Pine City Zoo/HTML/animals.html
+++ b/week_3/Pine City Zoo/HTML/animals.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pine City Zoo</title>
+    <title>Pine City Zoo- Animals</title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div id="tabs-top">
         <a href="animals.html">ANIMALS</a>
         <a href="Index.html">MAP</a>
-        <a href="#">PLACES</a>
+        <a href="places.html">PLACES</a>
     </div>
     <div id="main">
         <div id="content">
