--- a/week_3/Pine City Zoo/HTML/Index.html
+++ b/week_3/Pine City Zoo/HTML/Index.html
@@ -11,7 +11,7 @@
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
                 <a href="Index.html">MAP</a>
-                <a href="#">PLACES</a>
+                <a href="places.html">PLACES</a>
             </div>
             <div id="main-home">
                 <img src="../Images/map.png" style="width:100%; height:auto;">
