Adding the other information to the places page

--- a/week_3/Pine City Zoo/HTML/places.html
+++ b/week_3/Pine City Zoo/HTML/places.html
@@ -24,27 +24,33 @@
             </a>
             <a class="info-box" href="#">
                 <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/amphitheatre-tn.png"/>
-                <h3>AMPHITHEATRE</h3>
-                <p>Catch an educational and entertaining event</p>
+                <img src="../Images/"/>
+                <h3>DINE @ THE ZOO</h3>
+                <p>Enjoy gourment meals in a serne outdoor setting</p>
             </a>
             <a class="info-box" href="#">
                 <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/amphitheatre-tn.png"/>
-                <h3>AMPHITHEATRE</h3>
-                <p>Catch an educational and entertaining event</p>
+                <img src="../Images/insect-house-tn.png"/>
+                <h3>INSECT HOUSE</h3>
+                <p>Creepy crawlies of every kind you can imagine!</p>
             </a>
             <a class="info-box" href="#">
                 <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/amphitheatre-tn.png"/>
-                <h3>AMPHITHEATRE</h3>
-                <p>Catch an educational and entertaining event</p>
+                <img src="../Images/lost-forest-tn.png"/>
+                <h3>LOST FOREST</h3>
+                <p>Relax and have a picnic under the trees by the lake.</p>
             </a>
             <a class="info-box" href="#">
                 <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/amphitheatre-tn.png"/>
-                <h3>AMPHITHEATRE</h3>
-                <p>Catch an educational and entertaining event</p>
+                <img src="../Images/mos-pizza.jpg"/>
+                <h3>MO'S PIZZA</h3>
+                <p>Scrumptous pizzas and pastasfor the family.</p>
+            </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png">
+                <img src="../Images/monkey-trail-tn.png"/>
+                <h3>MONKEY TRAIL</h3>
+                <p>Take a walk or ride through this challenging obstacle course</p>
             </a>
     </div>
     <div id="tabs-bottom">
