Fixing the layout of the places page, to ensure that it works with the style sheet

--- a/week_3/Pine City Zoo/HTML/places.html
+++ b/week_3/Pine City Zoo/HTML/places.html
@@ -17,41 +17,76 @@
     <div id="main">
         <div id="content">
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/amphitheatre-tn.png"/>
-                <h3>AMPHITHEATRE</h3>
-                <p>Catch an educational and entertaining event</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/amphitheatre-tn.png"/>
+                    <div class="text">
+                        <h3>AMPHITHEATRE</h3>
+                        <p>Catch an educational and entertaining event</p>
+                    </div>
+                </div>
             </a>
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/"/>
-                <h3>DINE @ THE ZOO</h3>
-                <p>Enjoy gourment meals in a serne outdoor setting</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/restaurant-tn.png"/>
+                    <div class="text">
+                        <h3>DINE @ THE ZOO</h3>
+                        <p>Enjoy gourment meals in a serne outdoor setting</p>
+                    </div>
+                </div>
             </a>
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/insect-house-tn.png"/>
-                <h3>INSECT HOUSE</h3>
-                <p>Creepy crawlies of every kind you can imagine!</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/insect-house-tn.png"/>
+                    <div class="text">
+                        <h3>INSECT HOUSE</h3>
+                        <p>Creepy crawlies of every kind you can imagine!</p>
+                    </div>
+                </div>
             </a>
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/lost-forest-tn.png"/>
-                <h3>LOST FOREST</h3>
-                <p>Relax and have a picnic under the trees by the lake.</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/lost-forest-tn.png"/>
+                    <div class="text">
+                        <h3>LOST FOREST</h3>
+                        <p>Relax and have a picnic under the trees by the lake.</p>
+                    </div>
+                </div>
             </a>
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/mos-pizza.jpg"/>
-                <h3>MO'S PIZZA</h3>
-                <p>Scrumptous pizzas and pastasfor the family.</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/mos-pizza.jpg"/>
+                    <div class="text">
+                        <h3>MO'S PIZZA</h3>
+                        <p>Scrumptous pizzas and pastas for the family.</p>
+                    </div>
+                </div>
             </a>
             <a class="info-box" href="#">
-                <img class="right" src="../Images/next-arrow.png">
-                <img src="../Images/monkey-trail-tn.png"/>
-                <h3>MONKEY TRAIL</h3>
-                <p>Take a walk or ride through this challenging obstacle course</p>
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/monkey-trail-tn.png"/>
+                    <div class="text">
+                        <h3>MONKEY TRAIL</h3>
+                        <p>Take a walk or ride through this challenging obstacle course.</p>
+                    </div>
+                </div>
             </a>
+            <a class="info-box" href="#">
+                <img class="right" src="../Images/next-arrow.png"/>
+                <div class="info-content">
+                    <img class="info-box-img" src="../Images/coffee-shop-tn.png"/>
+                    <div class="text">
+                        <h3>WILD THINGS COFFEE SHOP</h3>
+                        <p>Enjoy a cuppa or a dessert here.</p>
+                    </div>
+                </div>
+            </a>
+            
     </div>
     <div id="tabs-bottom">
         <a href="#">WEATHER</a>
