--- a/week_3/Pine City Zoo/HTML/places.html
+++ b/week_3/Pine City Zoo/HTML/places.html
@@ -16,7 +16,7 @@
     </div>
     <div id="main">
         <div id="content">
-            <a class="info-box" href="#">
+            <a class="info-box" href="amphitheatre.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/amphitheatre-tn.png"/>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="dine@thezoo.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/restaurant-tn.png"/>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="insecthouse.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/insect-house-tn.png"/>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="lostforest.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/lost-forest-tn.png"/>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="mo'spizza.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/mos-pizza.jpg"/>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="monkeytrail.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/monkey-trail-tn.png"/>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </a>
-            <a class="info-box" href="#">
+            <a class="info-box" href="wildthingscoffee.html">
                 <img class="right" src="../Images/next-arrow.png"/>
                 <div class="info-content">
                     <img class="info-box-img" src="../Images/coffee-shop-tn.png"/>
