--- a/week_3/Pine City Zoo/HTML/dine@thezoo.html
+++ b/week_3/Pine City Zoo/HTML/dine@thezoo.html
@@ -17,7 +17,7 @@
     <div id="main">
         <div id="content">
             <div id="info-box-full">
-                <img src="../Images/insect-house-tn.png"/>
+                <img src="../Images/outdoor_restaurant.jpg"/>
                 <h3>DINE @ THE ZOO</h3>
                 <p>Gourmet meals, a serene atmosphere, live music and good company - sometimes that's all you need..</p>
                 <p>Dine @The Zoo gives you all this.</p>
