Adding the weather and feedbakc referances to the other pages, and adding info to the weather page

--- a/week_3/Pine City Zoo/HTML/weather.html
+++ b/week_3/Pine City Zoo/HTML/weather.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pine City Zoo- Monkey trail</title>
+    <title>Pine City Zoo- Weather</title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -16,15 +16,15 @@
     </div>
     <div id="main">
         <div id="content">
-            <div id="info-box-full">
-                <img src="../Images/monkey-trail.jpg"/>
-                <h3>MONKEY TRAIL</h3>
-                <p>Whether you choose to walk or ride, you will find the monkey trail very challenging. Take the 30 minute or 1 hour trail.</p>
-                <p>Be prepared to get dirty!</p>
-                <p><strong>WHERE WILL YOU FIND IT?</strong></p>
-                <p>Monkey Trail is at the eastern side of the zoo.</p>
-            </div>
-        </div>
+            <a class="info-box-full">
+                <h3>PINE CITY WEATHER</h3>
+                <p><img class="info-box-weather-icon" src="../Images/sunny.png"/>Sunny</p>
+                <p>&uArr; 25&deg &darr; 16&deg;</p>
+                <h1 class="info-box-weather-icon">22&deg;</h1>
+                <p><strong>FORCAST</strong></p>
+                <table></table>
+            </a>
+
     </div>
     <div id="tabs-bottom">
         <a href="weather.html">WEATHER</a>
