--- a/week_3/Pine City Zoo/HTML/Index.html
+++ b/week_3/Pine City Zoo/HTML/Index.html
@@ -17,8 +17,8 @@
                 <img src="../Images/map.png" style="width:100%; height:auto;">
             </div>
             <div id="tabs-bottom">
-                <a href="#">WEATHER</a>
-                <a href="#">FEEDBACK</a>
+                <a href="weather.html">WEATHER</a>
+                <a href="feedback.html">FEEDBACK</a>
             </div>
     </body>
 </html>
