--- a/week_3/Pine City Zoo/HTML/weather.html
+++ b/week_3/Pine City Zoo/HTML/weather.html
@@ -19,10 +19,47 @@
             <a class="info-box-full">
                 <h3>PINE CITY WEATHER</h3>
                 <p><img class="info-box-weather-icon" src="../Images/sunny.png"/>Sunny</p>
-                <p>&uArr; 25&deg &darr; 16&deg;</p>
+                <p>&uarr; 25&deg &darr; 16&deg;</p>
                 <h1 class="info-box-weather-icon">22&deg;</h1>
                 <p><strong>FORCAST</strong></p>
-                <table></table>
+                <table>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td>&uArr;30</td>
+                        <td>&darr;17</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td><img class="inforbox-weather-icon" src="../Images/rain.png"/></td>
+                        <td>&uArr;25</td>
+                        <td>&darr;15</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td>&uArr;29</td>
+                        <td>&darr;19</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td><img class="inforbox-weather-icon" src="../Images/sunny.png  "/></td>
+                        <td>&uArr;33</td>
+                        <td>&darr;20</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td>&uArr;35</td>
+                        <td>&darr;19</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday/td>
+                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td>&uArr;30</td>
+                        <td>&darr;17</td>
+                    </tr>
+                </table>
             </a>
 
     </div>
