Fixing the up arrow for the max temp

--- a/week_3/Pine City Zoo/HTML/weather.html
+++ b/week_3/Pine City Zoo/HTML/weather.html
@@ -26,37 +26,37 @@
                     <tr>
                         <td>Tuesday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
-                        <td>&uArr;30</td>
+                        <td>&uarr;30</td>
                         <td>&darr;17</td>
                     </tr>
                     <tr>
                         <td>Wednesday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/rain.png"/></td>
-                        <td>&uArr;25</td>
+                        <td>&uarr;25</td>
                         <td>&darr;15</td>
                     </tr>
                     <tr>
                         <td>Thursday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
-                        <td>&uArr;29</td>
+                        <td>&uarr;29</td>
                         <td>&darr;19</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/sunny.png  "/></td>
-                        <td>&uArr;33</td>
+                        <td>&uarr;33</td>
                         <td>&darr;20</td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
-                        <td>&uArr;35</td>
+                        <td>&uarr;35</td>
                         <td>&darr;19</td>
                     </tr>
                     <tr>
                         <td>Sunday/td>
                         <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
-                        <td>&uArr;30</td>
+                        <td>&uarr;30</td>
                         <td>&darr;17</td>
                     </tr>
                 </table>
