Adding the transperant background and fixing a typo in the html file

--- a/week_3/Pine City Zoo/HTML/weather.html
+++ b/week_3/Pine City Zoo/HTML/weather.html
@@ -54,7 +54,7 @@
                         <td>&darr;19</td>
                     </tr>
                     <tr>
-                        <td>Sunday/td>
+                        <td>Sunday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
                         <td>&uarr;30</td>
                         <td>&darr;17</td>
