--- a/week_3/Pine City Zoo/HTML/weather.html
+++ b/week_3/Pine City Zoo/HTML/weather.html
@@ -16,7 +16,7 @@
     </div>
     <div id="main">
         <div id="content">
-            <div id="info-box-full">
+            <a class="info-box-full">
                 <h3>PINE CITY WEATHER</h3>
                 <p><img class="info-box-weather-icon" src="../Images/sunny.png"/>Sunny</p>
                 <p>&uarr; 25&deg &darr; 16&deg;</p>
@@ -25,11 +25,11 @@
                 <table>
                     <tr>
                         <td>Tuesday</td>
-                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td><img class="info-box-weather-icon" src="../Images/partly-cloudy.png"/></td>
                         <td>&uarr;30</td>
                         <td>&darr;17</td>
                     </tr>
-                    <tr>
+                    <tr>s
                         <td>Wednesday</td>
                         <td><img class="inforbox-weather-icon" src="../Images/rain.png"/></td>
                         <td>&uarr;25</td>
@@ -60,7 +60,7 @@
                         <td>&darr;17</td>
                     </tr>
                 </table>
-            </div>
+            </a>
 
     </div>
     <div id="tabs-bottom">
