--- a/week_3/Pine City Zoo/HTML/weather.html
+++ b/week_3/Pine City Zoo/HTML/weather.html
@@ -16,12 +16,12 @@
     </div>
     <div id="main">
         <div id="content">
-            <a class="info-box-full">
+            <div class="info-box-full">
                 <h3>PINE CITY WEATHER</h3>
                 <p><img class="info-box-weather-icon" src="../Images/sunny.png"/>Sunny</p>
-                <p>&uarr; 25&deg &darr; 16&deg;</p>
+                <p>&uarr; 25&deg; &darr; 16&deg;</p>
                 <h1 class="info-box-weather-icon">22&deg;</h1>
-                <p><strong>FORCAST</strong></p>
+                <p><strong>FORECAST</strong></p>
                 <table>
                     <tr>
                         <td>Tuesday</td>
@@ -29,44 +29,43 @@
                         <td>&uarr;30</td>
                         <td>&darr;17</td>
                     </tr>
-                    <tr>s
+                    <tr>
                         <td>Wednesday</td>
-                        <td><img class="inforbox-weather-icon" src="../Images/rain.png"/></td>
+                        <td><img class="info-box-weather-icon" src="../Images/rain.png"/></td>
                         <td>&uarr;25</td>
                         <td>&darr;15</td>
                     </tr>
                     <tr>
                         <td>Thursday</td>
-                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td><img class="info-box-weather-icon" src="../Images/partly-cloudy.png"/></td>
                         <td>&uarr;29</td>
                         <td>&darr;19</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
-                        <td><img class="inforbox-weather-icon" src="../Images/sunny.png  "/></td>
+                        <td><img class="info-box-weather-icon" src="../Images/sunny.png"/></td>
                         <td>&uarr;33</td>
                         <td>&darr;20</td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
-                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td><img class="info-box-weather-icon" src="../Images/partly-cloudy.png"/></td>
                         <td>&uarr;35</td>
                         <td>&darr;19</td>
                     </tr>
                     <tr>
                         <td>Sunday</td>
-                        <td><img class="inforbox-weather-icon" src="../Images/partly-cloudy.png"/></td>
+                        <td><img class="info-box-weather-icon" src="../Images/partly-cloudy.png"/></td>
                         <td>&uarr;30</td>
                         <td>&darr;17</td>
                     </tr>
                 </table>
-            </a>
-
+            </div>
+        </div>
     </div>
     <div id="tabs-bottom">
         <a href="weather.html">WEATHER</a>
         <a href="feedback.html">FEEDBACK</a>
     </div>
-
 </body>
 </html>
