--- a/week_3/Pine City Zoo/HTML/feedback.html
+++ b/week_3/Pine City Zoo/HTML/feedback.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pine City Zoo- Weather</title>
+    <title>Pine City Zoo- Feedback/title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
@@ -16,15 +16,21 @@
     </div>
     <div id="main">
         <div id="content">
-            <a class="info-box" >
-
-            </a>
-
+            <div class="info-box-full">
+                <img src="../Images/giraffe-large.jpg"/>
+                <h3>WE'D LOVE TO HEAR FROM YOU!</h3>
+                <p>We always strive to do better, so your feedbakc is importnt tous.
+                    Please fill in the form below</p>
+                <input type="text" placeholder="Your name" id="name">
+                <input type="text" placeholder="Your email" id="email">
+                <textarea placeholder="Type your message here"></textarea>
+                <a class="button" href="message-recieved.html">SUBMIT</a>
+            </div>
+        </div>
     </div>
     <div id="tabs-bottom">
         <a href="weather.html">WEATHER</a>
         <a href="feedback.html">FEEDBACK</a>
     </div>
-
 </body>
 </html>
