Fixing a error in the title of the page

--- a/week_3/Pine City Zoo/HTML/feedback.html
+++ b/week_3/Pine City Zoo/HTML/feedback.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pine City Zoo- Feedback/title>
+    <title>Pine City Zoo- Feedback</title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
