Fixing the variables for the code

--- a/week_4/HTML/js-outputs.html
+++ b/week_4/HTML/js-outputs.html
@@ -13,9 +13,9 @@
             var text2;
             var text3;
 
-            text1 = "This is variable 1"
-            text2 = "This is variable 2 "
-            text3 = "This is variable 3"
+            text1 = "This will be a heading for the webpage"
+            text2 = "This is variable 2 and it will be concatonated with " 
+            text3 = "Variable 3"
 
             document.getElementById("main-heading").innerHTML = (text1);
             document.getElementById("paragraph-1").innerHTML = (text2 + text3);
