Adding number variables to the JS code

--- a/week_4/HTML/js-outputs.html
+++ b/week_4/HTML/js-outputs.html
@@ -13,12 +13,17 @@
             var text2;
             var text3;
 
+            var Num1 = 12;
+            var Num2 = 22;
+
             text1 = "This will be a heading for the webpage"
             text2 = "This is variable 2 and it will be concatonated with " 
             text3 = "Variable 3"
 
             document.getElementById("main-heading").innerHTML = (text1);
             document.getElementById("paragraph-1").innerHTML = (text2 + text3);
+            document.getElementById("paragraph2").innerHTML = (Num1);
+            document.getElementById("paragraph2").innerHTML = (Num1 + "x" + Num2 + "=" Num1 * Num2) 
         </script>
     </body>
 </html>
