Adding an additional paragraph to the JS code

--- a/week_4/HTML/js-outputs.html
+++ b/week_4/HTML/js-outputs.html
@@ -7,6 +7,8 @@
     <body>
         <h1 id="main-heading">This is a heading written with html.</h1>
         <p id="paragraph-1">This is a paragraph written with html.</p>
+        <p id="paragraph-2"></p>
+        <p id="paragraph-3"></p>
 
         <script>
             var text1;
@@ -22,8 +24,8 @@
 
             document.getElementById("main-heading").innerHTML = (text1);
             document.getElementById("paragraph-1").innerHTML = (text2 + text3);
-            document.getElementById("paragraph2").innerHTML = (Num1);
-            document.getElementById("paragraph2").innerHTML = (Num1 + "x" + Num2 + "=" Num1 * Num2) 
+            document.getElementById("paragraph-2").innerHTML = (Num1);
+            document.getElementById("paragraph-3").innerHTML = (num1 + “ x ” + num2 + “ = ” num1 * num2 );
         </script>
     </body>
 </html>
