--- a/week_4/HTML/js-outputs.html
+++ b/week_4/HTML/js-outputs.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet"  type="test/css" href="../CSS/Style.css">
+        <link rel="stylesheet"  type="text/css" href="../CSS/Style.css">
     </head>
     <body>
         <h1 id="main-heading">This is a heading written with html.</h1>
@@ -18,14 +18,14 @@
             var Num1 = 12;
             var Num2 = 22;
 
-            text1 = "This will be a heading for the webpage"
-            text2 = "This is variable 2 and it will be concatonated with " 
-            text3 = "Variable 3"
+            text1 = "This will be a heading for the webpage";
+            text2 = "This is variable 2 and it will be concatonated with " ;
+            text3 = "Variable 3";
 
             document.getElementById("main-heading").innerHTML = (text1);
             document.getElementById("paragraph-1").innerHTML = (text2 + text3);
             document.getElementById("paragraph-2").innerHTML = (Num1);
-            document.getElementById("paragraph-3").innerHTML = (num1 + “ x ” + num2 + “ = ” num1 * num2 );
+            document.getElementById("paragraph-3").innerHTML = (Num1 + "x" + Num2 + "="( Num1 * Num2 ));
         </script>
     </body>
 </html>
