Adding another number to the equation

--- a/week_4/HTML/js-outputs.html
+++ b/week_4/HTML/js-outputs.html
@@ -24,7 +24,7 @@
 
             document.getElementById("main-heading").innerHTML = (text1);
             document.getElementById("paragraph-1").innerHTML = (text2 + text3);
-            document.getElementById("paragraph-2").innerHTML = (Num1);
+            document.getElementById("paragraph-2").innerHTML = (Num1 + Num2);
             document.getElementById("paragraph-3").innerHTML = (Num1 + "x" + Num2 + "="( Num1 * Num2 ));
         </script>
     </body>
