--- a/week_4/HTML/js-outputs.html
+++ b/week_4/HTML/js-outputs.html
@@ -1,31 +1,31 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet"  type="text/css" href="../CSS/Style.css">
-    </head>
-    <body>
-        <h1 id="main-heading">This is a heading written with html.</h1>
-        <p id="paragraph-1">This is a paragraph written with html.</p>
-        <p id="paragraph-2"></p>
-        <p id="paragraph-3"></p>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
+</head>
+<body>
+    <h1 id="main-heading">This is a heading written with html.</h1>
+    <p id="paragraph-1">This is a paragraph written with html.</p>
+    <p id="paragraph-2"></p>
+    <p id="paragraph-3"></p>
 
-        <script>
-            var text1;
-            var text2;
-            var text3;
+    <script>
+        var text1;
+        var text2;
+        var text3;
 
-            var Num1 = 12;
-            var Num2 = 22;
+        var Num1 = 12;
+        var Num2 = 22;
 
-            text1 = "This will be a heading for the webpage";
-            text2 = "This is variable 2 and it will be concatonated with " ;
-            text3 = "Variable 3";
+        text1 = "This will be a heading for the webpage";
+        text2 = "This is variable 2 and it will be concatonated with ";
+        text3 = "Variable 3";
 
-            document.getElementById("main-heading").innerHTML = (text1);
-            document.getElementById("paragraph-1").innerHTML = (text2 + text3);
-            document.getElementById("paragraph-2").innerHTML = (Num1 + Num2);
-            document.getElementById("paragraph-3").innerHTML = (Num1 + "x" + Num2 + "="( Num1 * Num2 ));
-        </script>
-    </body>
+        document.getElementById("main-heading").innerHTML = text1;
+        document.getElementById("paragraph-1").innerHTML = text2 + text3;
+        document.getElementById("paragraph-2").innerHTML = Num1 + Num2;
+        document.getElementById("paragraph-3").innerHTML = Num1 + " x " + Num2 + " = " + (Num1 * Num2);
+    </script>
+</body>
 </html>
