Removing the brackets to the codes

--- a/week_4/HTML/password.html
+++ b/week_4/HTML/password.html
@@ -9,10 +9,10 @@
             var userInputPassword = "Incorrect Password";
             var actualPassword = "Password";
 
-            if(userInputPassword == actualPassword) {
-                document.getElementById("output").innerHTML = ("Correct password");
+            if (userInputPassword == actualPassword) {
+                document.getElementById("output").innerHTML = "Correct password";
             } else {
-                document.getElementById("output").innerHTML = ("Incorrect password. Try again.");
+                document.getElementById("output").innerHTML = "Incorrect password. Try again.";
             }
 
         </script>
