Adding the paragraph section to th code, that allows it t display on the webpage

--- a/week_4/HTML/password.html
+++ b/week_4/HTML/password.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
 </head>
     <body>
+        <p id="output"></p>
         <script>
             var userInputPassword = "Incorrect Password";
             var actualPassword = "Password";
