--- a/week_4/HTML/functions.html
+++ b/week_4/HTML/functions.html
@@ -6,14 +6,20 @@
 </head>
     <body>
         <h1 id="heading" onclick="changeText()"> JavaScript</h1>
-        
+        <p id="addition"></p>
         <script>
+                addNumbers(10, 7);
+
                 function changeText() {
                     if (document.getElementById("heading").innerHTML == 'JavaScript') {
                         document.getElementById("heading").innerHTML = 'is awesome'
                     } else {
                         document.getElementById("heading").innerHTML = 'JavaScript'
                     }
+                }
+
+                function addNumbers(num1, num2) {
+                    document.getElementById("addition").innerHTML = num1 + num2;
                 }
         </script>
 
