Fixing a syntax error in line 11, by removing the capitol and replacing it with a lower case letter

--- a/week_4/HTML/functions.html
+++ b/week_4/HTML/functions.html
@@ -8,7 +8,7 @@
         <h1 id="heading" onclick="changeText()"> JavaScript</h1>
         <p id="addition"></p>
         <script>
-                document.getElementById("Addition").innerHTML = addNumbers(10, 7);
+                document.getElementById("addition").innerHTML = addNumbers(10, 7);
 
                 function changeText() {
                     if (document.getElementById("heading").innerHTML == 'JavaScript') {
