fixing a spelling error

--- a/week_4/HTML/variableScope.html
+++ b/week_4/HTML/variableScope.html
@@ -6,8 +6,9 @@
 </head>
     <body>
         <p id="outputText"></p>
+
         <script>
-            someFunciton(); 
+            someFunction(); 
 
             function someFunction(){
                 var someVariable = 100;
