Adding the login link for the code

--- a/week_4/HTML/loginForm.html
+++ b/week_4/HTML/loginForm.html
@@ -10,6 +10,9 @@
         <form>
             <label for="usernameInput">Username:</label><input type="text" id="usernameInput"/><br/>
             <label for="passwordInput">Password</label><input type="password" id="passwordInput"/><br/>
+            <p id="message"></p>
+            <br/><br/>
+            <a href="#">Log in</a>
         </form>
 
         <script>
