--- a/week_4/HTML/loginForm.html
+++ b/week_4/HTML/loginForm.html
@@ -12,7 +12,7 @@
             <label for="passwordInput">Password</label><input type="password" id="passwordInput"/><br/>
             <p id="message"></p>
             <br/><br/>
-            <a href="#">Log in</a>
+            <a href="#" onclick="verifyUser()">Log in</a>
         </form>
 
         <script>
