--- a/week_4/HTML/loginForm.html
+++ b/week_4/HTML/loginForm.html
@@ -23,7 +23,7 @@
             }
             function checkUserCreds(username, password) {
                 var systemUsername = "Bond";
-                var systemPassword = "007;";
+                var systemPassword = "007";
                 if(username == systemUsername && password == systemPassword){
                     document.getElementById("message").innerHTML = "Correct. Logging you in";   
                 } else {
