--- a/week_4/HTML/switch.html
+++ b/week_4/HTML/switch.html
@@ -4,43 +4,43 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
 </head>
-    <body>
-        <label for="weather">What's the weather like?</label>
-        <select id="weather">
-            <option value="sunny">Sunny</option>
-            <option value="windy">Windy</option>
-            <option value="rainy">Rainy</option>
-            <option value="snowy">Snowy</option>
-            <option value="cloudy">Cloudy</option>
-        </select>
-        <a href="#" onlcick="btnPressed()"GO!></a>
-        <p id="outputText">Weather advice : </p>
-        
-        <script>
-            function btnPressed() {
-                var weatherSelected = document.getElementById("weather").value;
-                var advice;
+<body>
+    <label for="weather">What's the weather like?</label>
+    <select id="weather">
+        <option value="sunny">Sunny</option>
+        <option value="windy">Windy</option>
+        <option value="rainy">Rainy</option>
+        <option value="snowy">Snowy</option>
+        <option value="cloudy">Cloudy</option>
+    </select>
+    <button onclick="btnPressed()">GO!</button>
+    <p id="outputText">Weather advice: </p>
 
-                switch(weatherSelected) {
-                    case "sunny":
-                        advice = "Wear your sunglasses";
-                        break;
-                    case "windy":
-                        advice = "Wear a jacket";
-                        break;
-                    case "snowy":
-                        advice = "Dress warm";
-                        break;
-                    case "rainy":
-                        advice = "Wear a rain coat and carry an umbrella";
-                        break;
-                    case "cloudy":
-                        advice ="Carry a jacket. It might rain";
-                        break;
-                }
-                document.getElementById("outputText").innerHTML = "Weather advice: " + advice;
+    <script>
+        function btnPressed() {
+            var weatherSelected = document.getElementById("weather").value;
+            var advice;
+
+            switch (weatherSelected) {
+                case "sunny":
+                    advice = "Wear your sunglasses";
+                    break;
+                case "windy":
+                    advice = "Wear a jacket";
+                    break;
+                case "snowy":
+                    advice = "Dress warm";
+                    break;
+                case "rainy":
+                    advice = "Wear a rain coat and carry an umbrella";
+                    break;
+                case "cloudy":
+                    advice = "Carry a jacket. It might rain";
+                    break;
             }
-        </script>
 
-    </body>
+            document.getElementById("outputText").innerHTML = "Weather advice: " + advice;
+        }
+    </script>
+</body>
 </html>
