Learning that the different symbols have different functions when working with strings

--- a/week_4/HTML/stringsAndNumbers.html
+++ b/week_4/HTML/stringsAndNumbers.html
@@ -7,10 +7,10 @@
     <body>
         <p id="outputText"></p>
         <script>
-            var text1 = "4";
+            var text1 = "10";
             var text2 = "5";
 
-            document.getElementById("outputText").innerHTML = text1 + text2;
+            document.getElementById("outputText").innerHTML = text1 - text2;
 
 
 
