Continuing with string to numbers, by writing a function that turns strings into numbers

--- a/week_4/HTML/stringsAndNumbers.html
+++ b/week_4/HTML/stringsAndNumbers.html
@@ -10,9 +10,14 @@
             var text1 = "10";
             var text2 = "5";
 
-            document.getElementById("outputText").innerHTML = text1 - text2;
+            var num1 = stringToNumber(text1);
+            var num2 = stringToNumber(text2);
 
-
+            document.getElementById("outputText").innerHTML = num1 + num2;
+            
+            function stringToNumber(text){
+                return parseInt(text);
+            }
 
         </script>
     </body>
