Texting weather the function works

--- a/week_4/HTML/stringsAndNumbers.html
+++ b/week_4/HTML/stringsAndNumbers.html
@@ -7,7 +7,7 @@
     <body>
         <p id="outputText"></p>
         <script>
-            var text1 = "ten";
+            var text1 = "98";
             var text2 = "5";
 
             var num1 = stringToNumber(text1);
